# agemo

./: .SRCINFO  .bumpversion.cfg  .gitignore  HyprParser.py  PKGBUILD  README.md  SharedData.py  agemo.desktop  agemo.json  agemo.py  config-parser.py  install.sh  main.py  pyproject.toml  requirements.txt  style.qss  thumnailer.py  uninstall.sh  xdgthumbails.py
.github/workflows/: pytest.yml
src/: SharedData.py  __init__.py  agemo.py  constants.py  style.qss  xdgthumbails.py
tests/: test_agemo.py  test_shareddata.py  test_xdgthumbails.py
